# rag_youtuber_kanilla

./: .gitignore  README.md  explorations.ipynb  function_app.py  gemini_intro.ipynb  hello.py  local.settings.json  pyproject.toml  python_test.py  requirements.txt  startup.sh
.deploy/: function_app.py  requirements.txt
.deploy/knowledge_base/: api.py  f-a.py  pyproject.toml  rag_agent.py  rag_cli.py
_backup_old_v1/chat_function/: function.json
backend/: config.py  constants.py  data_models.py  rag.py  rag_youtuber_kanilla.code-workspace
chat_function/: __init__.py
frontend/: app.py  app_streamlit.py  function_app.py
knowledge_base/: README.md  api.py  explorations.ipynb  ingestion.py  mds_to_text.py  rag_agent.py  retriever.py
src/: api.py  config.py  history_store.py  ingest.py  rag_engine.py  schemas.py  video_mvp.py
tests/: test_api.py  test_ingest.py
