[project]
name = "rag-youtuber-kanilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.55.0",
    "ipykernel>=7.1.0",
    "lancedb>=0.26.0",
    "pydantic-ai>=1.35.0",
    "pydantic-settings>=2.12.0",
]
