[project]
name = "rag-youtuber-kanilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.24.0",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "google-genai>=1.55.0",
    "ipykernel>=7.1.0",
    "lancedb>=0.26.0",
    "pydantic-ai>=1.35.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.38.0",
]
